--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -30,7 +30,7 @@
       <ion-item lines="full">
         <ion-button type="submit" color="light" expand="block">
         <ion-label position="floating">Palavra-passe</ion-label>
-        <ion-input type="pass" formControlName="nome" required></ion-input>
+        <ion-input type="password" formControlName="nome" required></ion-input>
         </ion-button>
       </ion-item>
       <ion-text class="ion-padding" color="danger" *ngIf="isSubmitted && IHMForm.controls['nome'].errors?.['required']">
@@ -43,7 +43,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Entrar</ion-button>
+        <ion-button class = "botao-entrar" type="submit" expand="block">Entrar</ion-button>
       </ion-col>
     </ion-row>
 
