--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons class="ion-margin-start" slot="start">
+      <ion-icon style= "font-size: 36px;" name= "caret-forward-circle-outline"></ion-icon>
+    </ion-buttons>
     <ion-title>
-      Tab 1
+      Total Movies
     </ion-title>
   </ion-toolbar>
 </ion-header>
