--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>tab4</ion-title>
+    <ion-buttons class="ion-margin-start" slot="start">
+      <ion-icon style= "font-size: 36px;" name= "caret-forward-circle-outline"></ion-icon>
+    </ion-buttons>
+    <ion-title>
+      Listas
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <!--ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">tab4</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header-->
 </ion-content>
