--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,28 +2,28 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
-      <ion-label>Início</ion-label>
+      <ion-icon aria-hidden="true" name="home-outline" class="icons"></ion-icon>
+      <ion-label class="labels">Início</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon aria-hidden="true" name="time-outline"></ion-icon>
-      <ion-label>Novo</ion-label>
+      <ion-icon aria-hidden="true" name="time-outline" class="icons"></ion-icon>
+      <ion-label class="labels">Novo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon aria-hidden="true" name="star-outline"></ion-icon>
-      <ion-label>Destaques</ion-label>
+      <ion-icon aria-hidden="true" name="star-outline" class="icons"></ion-icon>
+      <ion-label class="labels">Destaques</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon aria-hidden="true" name="heart-outline"></ion-icon>
-      <ion-label>Listas</ion-label>
+      <ion-icon aria-hidden="true" name="heart-outline" class="icons"></ion-icon>
+      <ion-label class="labels">Listas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
-      <ion-icon aria-hidden="true" name="people-outline"></ion-icon>
-      <ion-label>Fóruns</ion-label>
+      <ion-icon aria-hidden="true" name="people-outline" class="icons"></ion-icon>
+      <ion-label class="labels">Fóruns</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
