--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,20 +1,36 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons class="ion-margin-start" slot="start">
-      <ion-icon style= "font-size: 36px;" name= "caret-forward-circle-outline"></ion-icon>
-    </ion-buttons>
-    <ion-title>
+  <ion-toolbar class="toolbar"> 
+    <ion-text class="total-movies">
       Total Movies
-    </ion-title>
+    </ion-text>
+    <ion-buttons slot="end">
+      <ion-icon name="search-outline" class="search-icon"></ion-icon>
+      <ion-icon name="person-outline" class="other-icons"></ion-icon>
+      <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
+      <ion-icon name="settings-outline" class="other-icons"></ion-icon>
+      <img src="src/assets/img/" class="small-image">
+      <img src="assets/img/netflix.png" class="small-image">
+      <img src="assets/img/hbo.png" class="small-image">
+      <img src="assets/img/disney+.png" class="small-image">
+      <img src="assets/img/primevideo.png" class="small-image">
+      <img src="assets/img/.png" class="small-image">
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!--ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1 class="genre">Ação</h1>
+  <div class="image-container">
+  <img src="assets/img/uncharted.jpg" class="capa">
+  <img src="assets/img/Black_Adam.jpg" class="capa">
+  <img src="assets/img/velocidadefuriosa9.jpg" class="capa">
+</div>
+<br>
+  <h1 class="genre">Drama</h1>
+  <div class="image-container">
+  <img src="assets/img/alfaiate.jpg" class="capa">
+  <img src="assets/img/casagucci.png" class="capa">
+  <img src="assets/img/banqueiroo.jpg" class="capa">
+</div>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container-->
 </ion-content>
