--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -21,6 +21,7 @@
   }
 
   .toolbar {
+    --background: #000000 ;
     height: 90px;
   }
 
@@ -60,3 +61,5 @@
     top: 10px;
     left: 20px;
   }
+
+ 
