--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,8 +1,5 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons class="ion-margin-start" slot="start">
-      <ion-icon style= "font-size: 36px;" name= "caret-forward-circle-outline"></ion-icon>
-    </ion-buttons>
     <ion-title>
       Destaques
     </ion-title>
@@ -10,11 +7,90 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!--ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="3">
+          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+            <img src="assets/img/uncharted.jpg"   class="button">
+          </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3"> 
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/alfaiate.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3">
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/banqueiroo.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+        <ion-col size="1"></ion-col>
+      </ion-row>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container-->
+    <ion-row>
+      <ion-col size="3">
+          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+            <img src="assets/img/Black_Adam.jpg"   class="button">
+          </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3"> 
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/velocidadefuriosa9.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3">
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/O-Agente-Noturno.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="3">
+          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+            <img src="assets/img/casagucci.png"   class="button">
+          </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3"> 
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/Emma_2020_Cartaz.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3">
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/uncharted.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+    </ion-row>
+    
+    <ion-row>
+      <ion-col size="3">
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/mulherrei.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="3"> 
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/mandalorian.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+      <ion-col size="1"></ion-col>
+      <ion-col size="4">
+        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <img src="assets/img/strangerthings.jpg"   class="button">
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-col size="1"></ion-col>
+  </ion-grid>
+
 </ion-content>
