--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,15 +12,15 @@
   <ion-list>
     <ion-item>
       <ion-label position="stacked">Nome de usuário</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text" name="username" [(ngModel)]="userdata.username"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Palavra-passe</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input type="password" name="password" [(ngModel)]="userdata.password"></ion-input>
     </ion-item>
     <ion-item lines="none">
       Não tens conta? <a routerLink="/signup"> Cria uma conta</a>
     </ion-item>
   </ion-list>
-<ion-button type="button" expand="block" shape="rounded" color="primary">Login</ion-button>
+<ion-button type="button" expand="block" shape="round" color="primary" (click)="Login()">Login</ion-button>
 </ion-content>
