pagina filme, alteracao no routing module

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,7 +10,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="3">
-          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
+          <ion-card button ='true' routerLink = "/filme/Uncharted" class="capa">
             <img src="assets/img/uncharted.jpg"   class="button">
           </ion-card>
       </ion-col>
