--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -21,16 +21,72 @@
 <ion-content [fullscreen]="true">
   <h1 class="genre">Ação</h1>
   <div class="image-container">
+    <ion-grid [fixed]="true">
+      <ion-row class="container_scroll">
   <img src="assets/img/uncharted.jpg" class="capa">
   <img src="assets/img/Black_Adam.jpg" class="capa">
   <img src="assets/img/velocidadefuriosa9.jpg" class="capa">
+  <img src="assets/img/uncharted.jpg" class="capa">
+  <img src="assets/img/Black_Adam.jpg" class="capa">
+  <img src="assets/img/velocidadefuriosa9.jpg" class="capa">
+  </ion-row>
+  </ion-grid> 
 </div>
 <br>
   <h1 class="genre">Drama</h1>
   <div class="image-container">
+    <ion-grid [fixed]="true">
+      <ion-row class="container_scroll">
   <img src="assets/img/alfaiate.jpg" class="capa">
   <img src="assets/img/casagucci.png" class="capa">
   <img src="assets/img/banqueiroo.jpg" class="capa">
+  <img src="assets/img/alfaiate.jpg" class="capa">
+  <img src="assets/img/casagucci.png" class="capa">
+  <img src="assets/img/banqueiroo.jpg" class="capa">
+</ion-row>
+</ion-grid> 
+</div>
+
+<h1 class="genre">Drama</h1>
+<div class="image-container">
+  <ion-grid [fixed]="true">
+    <ion-row class="container_scroll">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+</ion-row>
+</ion-grid> 
+</div>
+
+<h1 class="genre">Drama</h1>
+<div class="image-container">
+  <ion-grid [fixed]="true">
+    <ion-row class="container_scroll">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+</ion-row>
+</ion-grid> 
+</div>
+
+<h1 class="genre">Drama</h1>
+<div class="image-container">
+  <ion-grid [fixed]="true">
+    <ion-row class="container_scroll">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+<img src="assets/img/alfaiate.jpg" class="capa">
+<img src="assets/img/casagucci.png" class="capa">
+<img src="assets/img/banqueiroo.jpg" class="capa">
+</ion-row>
+</ion-grid> 
 </div>
 
 </ion-content>
