--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -62,4 +62,9 @@
     left: 20px;
   }
 
- 
+  .container_scroll{
+    flex-wrap: nowrap;
+    overflow-x: scroll!important;
+    overflow-y: hidden;
+    width: 100%;
+    }
