--- a/src/app/filme/filme.page.scss
+++ b/src/app/filme/filme.page.scss
@@ -1,6 +1,6 @@
 .capa{
-    width: 100px;
-    height: 140px;
+    width: 120px;
+    height: 160px;
     margin-top: 0px;
     border-radius: 5px;
     position: relative;
@@ -16,3 +16,133 @@
     margin-left: 5px;
     margin-right: 5px;
   }
+
+  .toolbar {
+    --background: #000000 ;
+    height: 90px;
+  }
+
+  .titulo{
+    position: relative;
+    top: -170px;
+    left: 130px;
+    color: #FFFFFF;
+    font-size: 12px;
+  }
+
+  .imdb{
+    position: relative;
+    top: -154px;
+    left: 135px;
+    color: #FFFFFF;
+    font-size: 12px;
+  }
+
+  .logo_imdb{
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 41px;
+    position: relative;
+    left: 158px;
+    top: -210px;
+  }
+
+
+  .genero{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    left: 102px;
+    top: -184px;
+    font-size: 12px;
+  }
+
+  .genre{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    left: 102px;
+    top: -184px;
+    font-size: 12px;
+  }
+
+  .duracao{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    left: -50px;
+    top: -154px;
+    font-size: 12px;
+  }
+
+  .duration{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    left: -50px;
+    top: -154px;
+    font-size: 12px;
+  }
+
+  .botao{
+    margin-top: 160px;
+    width: 100px;
+    height: 30px;
+    font-size: 12px;
+    position: relative;
+    top: -300px;
+    left: 130px;
+    margin-right: 10px;
+    border-radius: 5px;
+  }
+
+  .sinopse{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    right: -20px;
+    top: -150px;
+    font-size: 16px;
+  }
+
+  .synopsis {
+    color: #FFFFFF;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    right: 50px;
+    top: -124px;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
