--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -12,7 +12,7 @@
   <ion-grid *ngFor="let movie of dataMovies | keyvalue" class="ion-margin">
     <ion-row>
       <ion-col size="12">
-        <ion-card button ='true' class="trailer">
+        <ion-card button ='true'>
           <img src={{movie.value.big_img}}>
         </ion-card>
       </ion-col>
@@ -20,13 +20,7 @@
     <ion-row>
       <ion-col size="4">
         <img src={{movie.value.img}} class="capa">
-        
       </ion-col>
-      <ion-grid>
-        <ion-row>
-          <ion-col size="10"></ion-col>
-        </ion-row>
-      </ion-grid>
     </ion-row>
     <ion-col class= "titulo"> {{ movie.value.title_year }}</ion-col>
     <ion-row class= "imdb">{{ movie.value.imdb_rating }}</ion-row>
@@ -36,17 +30,17 @@
     <ion-text class="duracao">Duração:</ion-text>
     <ion-text class= "duration">{{ movie.value.duration }}</ion-text>
     <ion-button class="botao">+  Ver mais tarde</ion-button>
+    <ion-text class="transmissao">Disponível em:</ion-text>
+    <img src={{movie.value.channel}} class="channel">
     <ion-text class="sinopse">Sinopse:</ion-text>
     <ion-text class= "synopsis">{{ movie.value.synopsis }}</ion-text>
-
-    <iframe width="360" height="360" src="https://www.youtube.com/embed/eHp3MbsCbMg" frameborder="0" allowfullscreen></iframe>
+    <ion-text class="trailer">Trailer:</ion-text>
     
-  
-     
-      
-      
-      
     
+    <!--iframe width="360" height="360" src="https://www.youtube.com/embed/eHp3MbsCbMg" frameborder="0" allowfullscreen></iframe-->
+    <iframe width="360" height="360" [src]= "movie?.value?.video" frameborder="0" allowfullscreen></iframe>
+    
+      
   </ion-grid>
 
   
