--- a/src/app/filme/filme.page.scss
+++ b/src/app/filme/filme.page.scss
@@ -119,7 +119,7 @@
     border-radius: 5px;
   }
 
-  .sinopse{
+  .transmissao{
     color: #FFFFFF;
     width: 22px;
     height: 16px;
@@ -128,8 +128,34 @@
     border-radius: 5px;
     margin-top: 45px;
     position: relative;
+    right: 90px;
+    top: -160px;
+    font-size: 16px;
+    white-space: nowrap;
+  }
+  
+  .channel{
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      margin-right: 10px;
+      border-radius: 5px;
+      margin-top: 41px;
+      position: relative;
+      left: -200px;
+      top: -100px;
+    }
+
+  .sinopse{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    position: relative;
     right: -20px;
-    top: -150px;
+    top: -170px;
     font-size: 16px;
   }
 
@@ -137,12 +163,28 @@
     color: #FFFFFF;
     margin-right: 10px;
     border-radius: 5px;
+    margin-bottom: 20px;
     margin-top: 45px;
     position: relative;
     right: 50px;
-    top: -124px;
+    top: -134px;
     font-size: 12px;
     white-space: nowrap;
     overflow: hidden;
 }
 
+
+  .trailer{
+    color: #FFFFFF;
+    width: 22px;
+    height: 16px;
+    object-fit: cover;
+    margin-right: 20px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    position: relative;
+    right: -14px;
+    top: -100px;
+    font-size: 16px;
+    white-space: nowrap;
+  }
