--- a/src/app/pesquisa/pesquisa.page.scss
+++ b/src/app/pesquisa/pesquisa.page.scss
@@ -1,3 +1,16 @@
+.small-image {
+    width: 25px;
+    height: 25px;
+    object-fit: cover;
+    margin-right: 10px;
+    border-radius: 5px;
+    margin-top: 45px;
+    position: relative;
+    right: 140px;
+
+}
+
+
 .toolbar {
     --background: #000000;
     height: 120px;
@@ -22,14 +35,14 @@
     font-size: 12px;
 }
 
-input.barra_pesquisa {
-    padding-left: 20px;
-}
-
-.back-icon {
+.back-icon{
     position: relative;
     left: -260px;
     color: #91C6FC;
     width: 24px;
     height: 24px;
+}
+
+input.barra_pesquisa {
+  padding-left: 20px;
 }
