--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
       Total Movies
     </ion-text>
     <ion-buttons slot="end">
-      <ion-icon name="search-outline" class="search-icon"></ion-icon>
+      <ion-icon name="search-outline" class="search-icon" routerLink = "/pesquisa" ></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
       <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
       <ion-icon name="settings-outline" class="other-icons"></ion-icon>
