Ja procura direito

--- a/src/app/pesquisa/pesquisa.page.html
+++ b/src/app/pesquisa/pesquisa.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar class="toolbar"> 
-      <ion-icon name="search-outline" class="search-icon" (click)="Pesquisa()"></ion-icon>
-        <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa" id="inputBusca">
-        <ion-icon name="arrow-back-outline" class="back-icon" routerLink = "/tabs/tab1"></ion-icon>
+    <ion-icon name="search-outline" class="search-icon" (click)="pesquisar()"></ion-icon>
+    <input type="text" placeholder="Busca por filmes, séries..." class="barra_pesquisa" [(ngModel)]="termoBusca">
+    <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
