--- a/src/app/pesquisa/pesquisa.page.scss
+++ b/src/app/pesquisa/pesquisa.page.scss
@@ -46,3 +46,18 @@
 input.barra_pesquisa {
   padding-left: 20px;
 }
+
+.capa{
+    width: 120px;
+    height: 160px;
+    margin-top: 0px;
+    border-radius: 5px;
+    position: relative;
+    margin-left: 10px;
+}
+
+.resultado{
+    color: #FFFFFF;
+    margin-top: -10px;
+    font-size: 24px;
+}
