--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,11 +1,10 @@
-.button{
+.button {
   height: 140px;
   width: 100px;
   border-radius: 5px;
 }
 
-  
-.capa{
+.capa {
   width: 100px;
   height: 140px;
   margin-top: 15px;
@@ -14,4 +13,7 @@
   margin-left: 10px;
 }
 
+.ion-margin {
+  margin: 10px;
+}
  
