--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,88 +9,11 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col size="3">
-          <ion-card button ='true' routerLink = "/filme/Uncharted" class="capa">
-            <img src="assets/img/uncharted.jpg"   class="button">
+      <ion-col size="3" *ngFor="let movie of dataMovies" class="ion-margin">
+          <ion-card button="true" class="capa">
+            <img [src]="movie.img" class="button" (click)="redirecionarFilme(movie)">
           </ion-card>
       </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3"> 
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/alfaiate.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3">
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/banqueiroo.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-        <ion-col size="1"></ion-col>
-      </ion-row>
-
-    <ion-row>
-      <ion-col size="3">
-          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-            <img src="assets/img/Black_Adam.jpg"   class="button">
-          </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3"> 
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/velocidadefuriosa9.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3">
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/O-Agente-Noturno.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
     </ion-row>
-
-    <ion-row>
-      <ion-col size="3">
-          <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-            <img src="assets/img/casagucci.png"   class="button">
-          </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3"> 
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/Emma_2020_Cartaz.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3">
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/uncharted.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-    </ion-row>
-    
-    <ion-row>
-      <ion-col size="3">
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/mulherrei.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="3"> 
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/mandalorian.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-      <ion-col size="1"></ion-col>
-      <ion-col size="4">
-        <ion-card button ='true' routerLink = "/tabs/tab1" class="capa">
-          <img src="assets/img/strangerthings.jpg"   class="button">
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-col size="1"></ion-col>
   </ion-grid>
-
 </ion-content>
