--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -35,6 +35,6 @@
     <ion-text class="synopsis">{{ movie.synopsis }}</ion-text>
     <ion-text class="trailer">Trailer:</ion-text>
 
-    <iframe width="360" height="360" [src]="movie.video" frameborder="0" allowfullscreen></iframe>
+    <!--iframe width="360" height="360" [src]="movie.video" frameborder="0" allowfullscreen></iframe-->
   </ion-grid>
 </ion-content>
