--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,10 @@
 <ion-header [translucent]="true">
-  <ion-toolbar class="toolbar"> 
+  <ion-toolbar class="toolbar">
     <ion-text class="total-movies">
       Total Movies
     </ion-text>
     <ion-buttons slot="end">
-      <ion-icon name="search-outline" class="search-icon" routerLink = "/pesquisa" ></ion-icon>
+      <ion-icon name="search-outline" class="search-icon" routerLink="/pesquisa"></ion-icon>
       <ion-icon name="person-outline" class="other-icons"></ion-icon>
       <ion-icon name="notifications-outline" class="other-icons"></ion-icon>
       <ion-icon name="settings-outline" class="other-icons"></ion-icon>
@@ -22,9 +22,9 @@
   <ion-grid>
     <ion-row>
       <ion-col size="3" *ngFor="let movie of dataMovies" class="ion-margin">
-          <ion-card button="true" class="capa">
-            <img [src]="movie.img" class="button" (click)="redirecionarFilme(movie)">
-          </ion-card>
+        <ion-card button="true" class="capa" (click)="redirecionarFilme(movie)">
+          <img [src]="movie.img" class="button">
+        </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
