--- a/src/app/filme/filme.page.scss
+++ b/src/app/filme/filme.page.scss
@@ -27,12 +27,12 @@
     top: -170px;
     left: 130px;
     color: #FFFFFF;
-    font-size: 12px;
+    font-size: 14px;
   }
 
   .imdb{
     position: relative;
-    top: -154px;
+    top: -170px;
     left: 135px;
     color: #FFFFFF;
     font-size: 12px;
@@ -44,10 +44,9 @@
     object-fit: cover;
     margin-right: 10px;
     border-radius: 5px;
-    margin-top: 41px;
     position: relative;
     left: 158px;
-    top: -210px;
+    top: -205px;
   }
 
 
@@ -58,11 +57,11 @@
     object-fit: cover;
     margin-right: 10px;
     border-radius: 5px;
-    margin-top: 45px;
     position: relative;
-    left: 102px;
-    top: -184px;
-    font-size: 12px;
+    left: 20px;
+    top: -180px;
+    font-size: 16px;
+    
   }
 
   .genre{
@@ -71,12 +70,12 @@
     height: 16px;
     object-fit: cover;
     margin-right: 10px;
-    border-radius: 5px;
     margin-top: 45px;
     position: relative;
-    left: 102px;
-    top: -184px;
+    left: 12px;
+    top: -170px;
     font-size: 12px;
+    
   }
 
   .duracao{
@@ -85,11 +84,9 @@
     height: 16px;
     object-fit: cover;
     margin-right: 10px;
-    border-radius: 5px;
-    margin-top: 45px;
     position: relative;
-    left: -50px;
-    top: -154px;
+    left: 134px;
+    top: -210px;
     font-size: 12px;
   }
 
@@ -99,24 +96,22 @@
     height: 16px;
     object-fit: cover;
     margin-right: 10px;
-    border-radius: 5px;
-    margin-top: 45px;
     position: relative;
-    left: -50px;
-    top: -154px;
+    left: 128px;
+    top: -210px;
     font-size: 12px;
   }
 
   .botao{
     margin-top: 160px;
-    width: 100px;
+    width: 120px;
     height: 30px;
     font-size: 12px;
     position: relative;
-    top: -300px;
+    top: -214px;
     left: 130px;
     margin-right: 10px;
-    border-radius: 5px;
+    
   }
 
   .transmissao{
@@ -125,25 +120,23 @@
     height: 16px;
     object-fit: cover;
     margin-right: 10px;
-    border-radius: 5px;
-    margin-top: 45px;
     position: relative;
-    right: 90px;
-    top: -160px;
-    font-size: 16px;
+    left: 134px;
+    top: -222px;
+    font-size: 12px;
     white-space: nowrap;
   }
   
   .channel{
-      width: 40px;
-      height: 40px;
+      width: 20px;
+      height: 20px;
       object-fit: cover;
       margin-right: 10px;
       border-radius: 5px;
       margin-top: 41px;
       position: relative;
-      left: -200px;
-      top: -100px;
+      left: 140px;
+      top: -206px;
     }
 
   .sinopse{
@@ -154,8 +147,8 @@
     margin-right: 10px;
     border-radius: 5px;
     position: relative;
-    right: -20px;
-    top: -170px;
+    left: 20px;
+    top: -150px;
     font-size: 16px;
   }
 
@@ -166,25 +159,34 @@
     margin-bottom: 20px;
     margin-top: 45px;
     position: relative;
-    right: 50px;
-    top: -134px;
+    right: -10px;
+    top: -140px;
     font-size: 12px;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 
-  .trailer{
-    color: #FFFFFF;
-    width: 22px;
-    height: 16px;
-    object-fit: cover;
-    margin-right: 20px;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    position: relative;
-    right: -14px;
-    top: -100px;
-    font-size: 16px;
-    white-space: nowrap;
+.trailer {
+  color: #FFFFFF;
+  width: auto;
+  height: auto;
+  object-fit: cover;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  position: relative;
+  left: 20px;
+  top: -120px;
+  font-size: 16px;
+  white-space: normal;
+}
+
+  .info {
+    margin: 10px 0; /* Define uma margem de 10px no topo e na parte inferior e 0 nas laterais */
+    white-space: normal;
+    max-width: 50%;
+    
+  }
+
+  ion-content{
+    max-width: 100%;
+    overflow-x: hidden;
   }
