--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -67,3 +67,11 @@
     overflow-y: hidden;
     width: 100%;
     }
+
+    .username{
+      color: azure;
+      position: relative;
+      left: 50px;
+      font-size: 22px;
+      top: 20px;
+    }
