ja funcionar o ver mais tarde

--- a/src/app/filme/filme.page.scss
+++ b/src/app/filme/filme.page.scss
@@ -7,6 +7,12 @@
     margin-left: 10px;
 }
 
+.back-icon{
+  color: #91C6FC;
+  width: 24px;
+  height: 24px;
+}
+
 .trailer{
      width: auto;
     height: auto;
