--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -4,6 +4,10 @@
       <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa">
       <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
   </ion-toolbar>
-
-
 </ion-header>
+
+<ion-fab>
+  <ion-fab-button class="createComment">
+    <ion-icon name="add">></ion-icon>
+  </ion-fab-button>
+</ion-fab>
