--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -1,3 +1,8 @@
+<ion-header [translucent]="true">
+  <ion-toolbar class="toolbar"> 
+    <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
+  </ion-toolbar>
+</ion-header>
 <ion-content [fullscreen]="true">
   <ion-grid class="ion-margin" *ngIf="movie">
     <ion-row>
@@ -22,7 +27,7 @@
     <ion-text class="transmissao info">Disponível em:</ion-text>
     <img [src]="movie.channel" class="channel info">
     <br>
-    <ion-button class="botao info">+ Ver mais tarde</ion-button>
+    <ion-button class="botao info" (click)="adicionarVerMaisTarde()">+ Ver mais tarde</ion-button>
     <br>
     <ion-text class="genero info">Género:</ion-text>
     <br>
