--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons class="ion-margin-start" slot="start">
-      <ion-icon style= "font-size: 36px;" name= "caret-forward-circle-outline"></ion-icon>
+      <ion-icon style="font-size: 36px;" name="caret-forward-circle-outline"></ion-icon>
     </ion-buttons>
     <ion-title>
       Listas
@@ -10,9 +10,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <!--ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">tab4</ion-title>
-    </ion-toolbar>
-  </ion-header-->
+  <ion-list>
+    <ion-item *ngFor="let filme of filmesVerMaisTarde">
+      <ion-thumbnail slot="start">
+        <img [src]="filme.imagem" alt="Capa do Filme">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ filme.tituloYear }}</h2>
+        <p>{{ filme.username }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
