--- a/src/app/filme/filme.page.html
+++ b/src/app/filme/filme.page.html
@@ -3,6 +3,7 @@
     <ion-icon name="arrow-back-outline" class="back-icon" routerLink="/tabs/tab1"></ion-icon>
   </ion-toolbar>
 </ion-header>
+
 <ion-content [fullscreen]="true">
   <ion-grid class="ion-margin" *ngIf="movie">
     <ion-row>
@@ -38,9 +39,9 @@
     <ion-text class="synopsis info">{{ movie.synopsis }}</ion-text>
     <br>
     <ion-text class="trailer info">Trailer:</ion-text>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ movie.video }}" frameborder="0" allowfullscreen></iframe>
     <iframe width="560" height="315" [src]="movie.video" frameborder="0" allowfullscreen></iframe>
     <iframe width="360" height="360" src="{{ movie.video }}" frameborder="0" allowfullscreen></iframe>
     {{movie.video}}
   </ion-grid>
-  
 </ion-content>
