--- a/src/app/filme/filme.page.scss
+++ b/src/app/filme/filme.page.scss
@@ -26,6 +26,9 @@
   .toolbar {
     --background: #000000 ;
     height: 90px;
+    position: sticky;
+    top: 0;
+    z-index: 100;
   }
 
   .titulo{
