--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -2,16 +2,26 @@
   <ion-toolbar class="toolbar"> 
     <ion-icon name="search-outline" class="search-icon"></ion-icon>
       <input type="text" placeholder="Busca por filmes, séries..." class ="barra_pesquisa">
-      <ion-icon name="arrow-back-outline" class="back-icon"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-fab>
-  <ion-fab-button class="createComment">
+  <ion-fab-button class="createPost">
     <ion-icon name="add">></ion-icon>
   </ion-fab-button>
 </ion-fab>
 
-<!-- <div>
-
-</div> -->
+<ion-content class = "ionContentColor">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card *ngFor="let post of posts"  (click)="redirecionarPost(post)" class="postCards">
+          <ion-card-header>
+            <ion-card-title>{{ post.postTitle }}</ion-card-title>
+            <ion-card-subtitle>{{ post.postCreator }} - {{post.postDate}}</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
