--- a/src/app/forum/forum.page.scss
+++ b/src/app/forum/forum.page.scss
@@ -6,3 +6,26 @@
 .commentCards {
     margin: 15px;
 }
+
+.comment{
+    margin-top: 30px;
+    position: relative;
+    right: -344px;
+    color: black;
+    width: 24px;
+    height: 24px;
+}
+
+.barra_comentario {
+    position: relative;
+    left: 5px;
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    top: -10px;
+    font-size: 12px;
+}
+
+input.barra_comentario {
+    padding-left: 20px;
+  }
