--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,5 +1,9 @@
-.login{
+.login {
     color: white;
 }
 
-
+.inputCostumization {
+    --background: white;
+    --border-radius: 67px;
+    --color: grey;
+}
